# PipinoCosmos

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  main.cpp
Controller/include/: AIService.h  Controller.h  Example.h  ProblemGenerator.h  SolutionGrader.h
Controller/src/: AIService.cpp  Controller.cpp  Example.cpp  ProblemGenerator.cpp  SolutionGrader.cpp
Model/include/: Model.h  OcrScanner.h
Model/src/: Model.cpp  OcrScanner.cpp
View/include/: View.h
View/src/: View.cpp
